<resources>
    <string name="app_name">Care Bridge</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="login_header_text">Login</string>
    <string name="login_image_description">Login image</string>
    <string name="email_text">Enter email:</string>
    <string name="password_text">Enter password:</string>
    <string name="email_enter_hint">Enter your email</string>
    <string name="password_enter_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_link_text"><u>Signup</u></string>
    <string name="signup_help_text">Don\'t have an account?</string>
    <string name="signup_header_text">SignUp</string>
    <string name="signup_image_description">Signup image</string>
    <string name="confirm_password_text">Confirm password:</string>
    <string name="confirm_password_hint">Enter your password again</string>
    <string name="signup_button_text">SignUp</string>
    <string name="login_link_text"><u>Login</u></string>
    <string name="login_help_text">Already have an account?</string>
    <string name="signup_fill_all_fields_error_text">Please fill all fields</string>
    <string name="signup_invalid_email_error_text">Please enter a valid email</string>
    <string name="signup_password_length_error_text">Password should be at least 6 characters</string>
    <string name="sgnup_passwords_match_error">Passwords do not match</string>
    <string name="signup_successfull_toast">Sign Up Successful</string>
    <string name="signup_failed_toast">"Sign Up Failed: "</string>
    <string name="login_emai_error_text">Email is required</string>
    <string name="login_valid_email_error_text">Please enter a valid email</string>
    <string name="login_password_error_text">Password is required</string>
    <string name="login_password_length_error_text">Password must be at least 6 characters</string>
    <string name="login_no_account_fount_toast">No account found with this email</string>
    <string name="login_incorrect_password_toast">Incorrect password</string>
    <string name="login_used_email_toast">This email is already in use</string>
    <string name="login_error_toast">Authentication failed. Please try again.</string>
    <string name="password_toggle_icon_description">Password toggle icon</string>
    <string name="editable_profile_image_description">editable profile image description</string>
    <string name="profile_image_change_plus_symbol">Profile image change plus symbol</string>
    <string name="profile_save_btn_text">Save profile</string>
    <string name="edit_profile_enter_your_name">Enter your name:</string>
    <string name="edit_profile_enter_name">Enter Name</string>
    <string name="edit_profile_enter_your_phone_number">Enter your phone number:</string>
    <string name="edit_profile_enter_phone_number">Enter Phone Number</string>
    <string name="settings_profile_image">Settings profile image</string>
    <string name="user_name">User name:</string>
    <string name="contact_no">Contact no:</string>
    <string name="edit_profile_btn_text">Edit Profile</string>
    <string name="edit_symbol_description">edit symbol description</string>
    <string name="app_language_btn_text">App Language</string>
    <string name="language_symbol_description">Language symbol description</string>
    <string name="about_btn_text">About</string>
    <string name="about_symbol_description">About symbol description</string>
    <string name="help_and_support_btn_text">Help and Support</string>
    <string name="contact_symbol_description">Contact symbol description</string>
    <string name="version_text">Version 1.0.0.1</string>
    <string name="contact_via_whatsapp">Contact via WhatsApp</string>
    <string name="whatsapp_icon_description">Whatsapp icon</string>
    <string name="facebook_icon_description">FaceBook icon</string>
    <string name="contact_via_facebook">Contact via FaceBook</string>
    <string name="contact_via_telegram">Contact via Telegram</string>
    <string name="telegram_icon_description">Telegram icon</string>
    <string name="instagram_icon_description">Instagram icon</string>
    <string name="gmail_icon_description">Gmail icon</string>
    <string name="contact_via_gmail">Send an email</string>
    <string name="welcome_text">Hi,</string>
    <string name="app_slogan">Connecting Generosity with Need, One\nDonation at a Time</string>
    <string name="home_profile_icon">Home profile icon</string>
    <string name="donate_btn_text">Donate Now</string>
    <string name="request_btn_text">Request Now</string>
    <string name="donor_form_heading">Donor Form</string>
    <string name="personal_details_heading">Personal Details</string>
    <string name="donor_name_text">* Enter your name:</string>
    <string name="donor_name_edit">Enter your name</string>
    <string name="donor_location_text">* Enter your location:</string>
    <string name="donor_location_edit">Enter your location</string>
    <string name="donor_contact_text">* Enter your contact number:</string>
    <string name="donor_contact_edit">Enter your contact number</string>
    <string name="product_details_heading">Product Details</string>
    <string name="donor_product_category_text">* Select product category:</string>
    <string name="donor_product_name_text">* Enter product name:</string>
    <string name="donor_product_name_edit">Enter product name</string>
    <string name="donor_product_quantity">* Enter product quantity:</string>
    <string name="donor_product_quantity_edit">Enter product quantity</string>
    <string name="donor_product_image_text">* Add product image:</string>
    <string name="product_image_btn_text">Add an image</string>
    <string name="donor_product_image_description">Donor product image description</string>
    <string name="donor_product_description_text">* Add product description</string>
    <string name="donor_product_description_edit">Enter product description</string>
    <string name="donor_donate_btn_text">Donate Now</string>
    <string name="searched_product_image_description">Searched Product Image Description</string>
    <string name="searched_product_name">* Product Name:</string>
    <string name="searched_product_quantity">* Available Quantity:</string>
    <string name="searched_product_description">* Product Description:</string>
    <string name="searched_product_details_header">Product Details</string>
    <string name="searched_product_donor_details_header">Donor Details</string>
    <string name="searched_product_donor_name">* Donor Name:</string>
    <string name="searched_donor_location">* Donor Location:</string>
    <string name="searched_donor_contact">* Donor Contact Number:</string>
    <string name="searched_product_category">* Product Category:</string>
    <string name="app_icon_description">App icon description</string>
    <string name="badge_text">© 2023–2024 Dip SE Badge</string>
    <string name="about_btn">View Website</string>
    <string name="back_arrow_description">Back arrow description</string>
    <string name="food_and_water_image_description">Food and Water Image</string>
    <string name="category_name_01">Food and Water</string>
    <string name="category_01_description">Non-perishable food items and clean drinking water.</string>
    <string name="category_name_02">Clothing</string>
    <string name="category_02_description">Gently used for new clothing items.</string>
    <string name="category_name_03">Hygiene Supplies</string>
    <string name="category_03_description">Essential items for personal cleanliness, such as soap, toothpaste, and sanitary products.</string>
    <string name="category_04_name">Medical Supplies</string>
    <string name="category_04_description">Equipment and medications necessary for health and first aid.</string>
    <string name="category_05_name">Shelter Items</string>
    <string name="category_05_description">Items such as blankets and tents to provide temporary housing solutions.</string>
    <string name="category_06_name">Electronics and Communications</string>
    <string name="category_description">Devices and tools for staying connected, like phones and chargers.</string>
    <string name="category_07_name">Education Materials</string>
    <string name="category_07_description">Books, stationery and other resources to support learning and education.</string>
    <string name="carousel_image_description">Carousel image description</string>
    <string name="product_image_description">Product Image Description</string>
    <string name="request_form_header">Request Form</string>
    <string name="selected_product_request_header">Request your product</string>
    <string name="xml_image_description">XML image description</string>
    <string name="enter_product_category">* Enter product category:</string>
    <string name="enter_product_category_edit">Enter product category</string>
    <string name="select_a_donor">* Select a donor:</string>
    <string name="contact_via_instagram">Contact via Instagram</string>
    <string name="notification_header_colon">": "</string>
    <string name="notification_detail_hint">Open to view full details…</string>
    <string name="delete_button_description">Delete button description</string>
    <string name="requester_name">* Requester name:</string>
    <string name="requester_contact">* Requester contact number:</string>
    <string name="requester_location">* Requester location:</string>
    <string name="product_name">* Product name:</string>
    <string name="product_category">* Product category:</string>
    <string name="product_quantity">* Product quantity:</string>
    <string name="donor_name">* Donor name:</string>
    <string name="qr_code_description">QR code description</string>
    <string name="hygiene_supplies_image_description">Hygiene supplies image description</string>
    <string name="medical_supplies_image_description">Medical supplies image description</string>
    <string name="clothing_image_description">Clothing image description</string>
    <string name="shelter_items_image_description">Shelter items image description</string>
    <string name="electronics_items_image_description">Electronics items image description</string>
    <string name="education_materials_image_description">Education materials image description</string>
    <string name="log_out_btn_text">Logout</string>
    <string name="logout_icon_description">Logout icon description</string>
    <string name="open_with">Open with</string>
    <string name="send_email">Send email…</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="select_option">Select Option</string>
    <string name="profile_photo_removed">Profile photo removed!</string>
    <string name="profileimage">ProfileImage</string>
    <string name="please_enter_name_and_phone">Please enter name and phone</string>
    <string name="image_upload_failed">"Image upload failed: "</string>
    <string name="profile_image_removed">Profile image removed</string>
    <string name="failed_to_remove_profile_image">"Failed to remove profile image: "</string>
    <string name="profile_saved">Profile saved</string>
    <string name="failed_to_save_profile">"Failed to save profile: "</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="what_is_carebridge">What is CareBridge</string>
    <string name="donation_system">Donation System?</string>
    <string name="join_us_in_making_a_difference">Join Us in Making a Difference</string>
    <string name="carebridge_devops_team">CareBridge Devops</string>
    <string name="from">from</string>
</resources>