<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xml_bg_color"
    android:padding="15dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_btn"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back_arrow_description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_linear"
        android:layout_below="@id/back_btn"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profile_image"
            android:layout_gravity="center"
            android:contentDescription="@string/editable_profile_image_description"
            android:src="@drawable/default_profile_picture"
            android:scaleType="centerCrop" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_profile_image"
            android:src="@drawable/ic_add"
            android:background="@color/transparent"
            android:layout_gravity="bottom"
            android:layout_marginStart="-42dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/profile_image_change_plus_symbol" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name_text"
        android:layout_below="@id/image_linear"
        android:text="@string/edit_profile_enter_your_name"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:layout_below="@id/edit_name_text"
        android:background="@drawable/text_input_background"
        android:padding="10dp"
        android:hint="@string/edit_profile_enter_name"
        android:textColorHint="@color/form_text_hint_color"
        android:textColor="@color/form_text_input_color"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_phone_text"
        android:layout_below="@id/edit_name"
        android:text="@string/edit_profile_enter_your_phone_number"
        android:textSize="16sp"
        android:textColor="@color/form_text_color"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_phone"
        android:layout_below="@id/edit_phone_text"
        android:background="@drawable/text_input_background"
        android:padding="10dp"
        android:hint="@string/edit_profile_enter_phone_number"
        android:textColorHint="@color/form_text_hint_color"
        android:textColor="@color/form_text_input_color"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:importantForAutofill="no"
        android:inputType="phone"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_below="@id/edit_phone"
        android:background="@drawable/button_background"
        android:text="@string/profile_save_btn_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:layout_marginTop="15dp"/>

</RelativeLayout>