<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xml_bg_color"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_header_card">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_arrow_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_header"
            android:layout_toEndOf="@id/back_btn"
            android:text="@string/donor_form_heading"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personal_details_linear"
            android:layout_below="@id/form_header_card"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_details_heading"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_color"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:layout_below="@id/personal_details_linear"
            android:text="@string/donor_name_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_below="@id/name_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_name_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_input_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_text"
            android:layout_below="@id/name"
            android:text="@string/donor_location_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:layout_below="@id/location_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_location_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_hint_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_text"
            android:layout_below="@id/location"
            android:text="@string/donor_contact_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:layout_below="@id/contact_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_contact_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_input_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="phone"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_details_linear"
            android:layout_below="@id/contact"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details_heading"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/text_color"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_category_text"
            android:layout_below="@id/product_details_linear"
            android:text="@string/donor_product_category_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_category"
            android:layout_below="@id/product_category_text"
            android:background="@drawable/text_input_background"
            style="@style/SpinnerStyle"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_text"
            android:layout_below="@id/product_category"
            android:text="@string/donor_product_name_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_name"
            android:layout_below="@id/product_name_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_product_name_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_input_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_quantity_text"
            android:layout_below="@id/product_name"
            android:text="@string/donor_product_quantity"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_quantity"
            android:layout_below="@id/product_quantity_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_product_quantity_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_input_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_image_text"
            android:layout_below="@id/product_quantity"
            android:text="@string/donor_product_image_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_product_image"
            android:layout_below="@id/product_image_text"
            android:background="@drawable/text_input_background"
            android:text="@string/product_image_btn_text"
            android:textColor="@color/form_text_hint_color"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/product_image"
            android:layout_below="@id/add_product_image"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/donor_product_image_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_description_text"
            android:layout_below="@id/product_image"
            android:text="@string/donor_product_description_text"
            android:textSize="16sp"
            android:textColor="@color/form_text_color"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/product_description"
            android:layout_below="@id/product_description_text"
            android:background="@drawable/text_input_background"
            android:hint="@string/donor_product_description_edit"
            android:textColorHint="@color/form_text_hint_color"
            android:textColor="@color/form_text_input_color"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/donate_button"
            android:layout_below="@id/product_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="?actionBarSize"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donor_donate_btn_text"
                    android:textSize="18sp"
                    android:textColor="@color/button_text_color"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>